<resources>
    <string name="app_name">LibreBlog RSS: Simple Alternative to Social Media</string>
    <string name="add_source">Add Source</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="image_url_optional">Image URL (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="open_settings_page">Open settings page</string>
    <string name="settings">Settings</string>
    <string name="open_more_options_page">Open more options page</string>
    <string name="more_options">More options</string>
    <string name="more_options_description">More options</string>
    <string name="more_options_title">More options</string>
    <string name="import_opml">Import (OPML)</string>
    <string name="export_opml">Export (OPML)</string>
    <string name="rate_app">Rate App</string>
    <string name="app_not_listed">Maybe in the future</string>
    <string name="about">About Us</string>
    <string name="close_settings">Close settings</string>
    <string name="settings_title">Settings</string>
    <string name="weight_is_it_recent">Weight: is it recent?</string>
    <string name="weight_is_it_complete">Weight: is it complete?</string>
    <string name="weight_source_score">Weight: source score</string>
    <string name="weight_source_likability">Weight: source likability</string>
    <string name="weight_similar_articles_liked">Weight: similar articles liked</string>
    <string name="weight_similar_articles_opened">Weight: similar articles opened</string>
    <string name="weight_source_spammability">Weight: source spammability (-)</string>
    <string name="weight_already_displayed">Weight: already displayed? (-)</string>
    <string name="complete_title">Completeness: title</string>
    <string name="complete_description">Completeness: description</string>
    <string name="complete_description_min_length">Completeness: description min length</string>
    <string name="complete_description_good_length">Completeness: description good length</string>
    <string name="complete_html">Completeness: html</string>
    <string name="complete_image">Completeness: image</string>
    <string name="complete_audio_or_video">Completeness: audio or video</string>
    <string name="complete_comments">Completeness: comments</string>
    <string name="complete_authors">Completeness: authors</string>
    <string name="complete_categories">Completeness: categories</string>
    <string name="articles_by_page_refresh">Articles by page refresh</string>
    <string name="delete_after_x_days">Delete after X days</string>
    <string name="term_frequency_max_nbr_of_liked_items">Term frequency: max nbr of liked items</string>
    <string name="term_frequency_max_nbr_of_read_items">Term frequency: max nbr of read items</string>
    <string name="save">Save</string>
    <string name="reset_defaults">Reset defaults</string>
    <string name="edit_source">Edit Source</string>
    <string name="load_more">Load more</string>
    <string name="delete_source_in_dialog">Delete source</string>
    <string name="do_you_want_to_delete">"Do you want to delete "</string>
    <string name="do_you_want_to_delete2">"? Note: Liked posts from this source will be deleted as well."</string>
    <string name="ok_in_dialog">OK</string>
    <string name="cancel_in_dialog">Cancel</string>
    <string name="add_source_in_dialog">Add Source</string>
    <string name="edit_source_in_menu">Edit source</string>
    <string name="delete_source_in_menu">Delete source</string>
    <string name="visible_posts_in_menu">Visible posts</string>
    <string name="hidden_posts_in_menu">Hidden posts</string>
    <string name="someone">Someone</string>
    <string name="hide_post_in_menu">Hide post</string>
    <string name="show_post_in_menu">Show post</string>
    <string name="copy_text_in_menu">Copy text</string>
    <string name="comments_in_menu">Comments</string>
    <string name="post_text">Post text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="like_tooltip">Like</string>
    <string name="no_link_available">No link available</string>
    <string name="open_tooltip">Open</string>
    <string name="share_link">Share link</string>
    <string name="no_app_available_to_share">No app available to share the link</string>
    <string name="share_tooltip">Share</string>
    <string name="no_app_available_to_open_the_link">No app available to open the link</string>
    <string name="choose_a_name">Choose a name</string>
    <string name="enter_a_url">Enter a URL</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="source_already_added">Source already added</string>
    <string name="rss_not_found">RSS not found</string>
    <string name="error">Error</string>
    <string name="invalid_image_url">Invalid image URL</string>
    <string name="edit_source_backstack">Edit Source</string>
    <string name="share_opml">Share OPML</string>
    <string name="done">Done</string>
    <string name="nothing_was_imported">Nothing was imported</string>
    <string name="coefficients_must_be_bigger">Coefficients must be bigger than 0 and smaller than 1</string>
    <string name="close_add_source_page">Close Add Source page</string>
    <string name="algorithm_for_sorting_posts">Algorithm for sorting articles</string>
    <string name="expanding_weight_is_it_complete">Expanding \'Weight: is it complete?\'</string>
    <string name="advanced_settings">Advanced: How many articles should be considered when suggesting similar articles?</string>
    <string name="other_settings">Other settings</string>
    <string name="search">Search…</string>
    <string name="type_at_least_3_characters">Type at least 3 characters</string>
    <string name="reposted_item">"Shared a post from "</string>
    <string name="following">Following:</string>
    <string name="and_other_people">and other people...</string>
</resources>
