<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/add_source_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/source_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:visibility="visible"
            tools:context=".ui.FragmentAddSource">

            <FrameLayout
                android:id="@+id/close_add_source_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/close_add_source_button"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/close_add_source_page"
                    android:outlineAmbientShadowColor="@android:color/transparent"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    app:srcCompat="@drawable/outline_close_22" />
            </FrameLayout>

        <LinearLayout
            android:id="@+id/source_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.DeviceDefault.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/source_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/add_source"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/source_title_label" />

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:hint="@string/url"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

            <EditText
                android:id="@+id/edit_image"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:hint="@string/image_url_optional"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/edit_id" />

            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/add_source_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/edit_image"
                tools:context=".ui.FragmentAddSource">

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/add_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:clickable="true"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/add_button">

                <ImageButton
                    android:id="@+id/settings_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/open_settings_page"
                    android:src="@drawable/outline_settings_32" />

                <TextView
                    android:id="@+id/settings_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/button_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_options_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:clickable="true"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settings_button_layout">

                <ImageButton
                    android:id="@+id/more_options_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contentDescription="@string/open_more_options_page"
                    android:src="@drawable/outline_menu_32" />

                <TextView
                    android:id="@+id/more_options_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/more_options"
                    android:textColor="@color/button_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>