<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/more_options_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/more_options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <FrameLayout
                android:id="@+id/close_more_options_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/close_more_options_button"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/more_options_description"
                    android:outlineAmbientShadowColor="@android:color/transparent"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    app:srcCompat="@drawable/outline_close_22" />
            </FrameLayout>

            <TextView
                android:id="@+id/more_options_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="70dp"
                android:text="@string/more_options_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/import_sources_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="@color/button_background"
                android:text="@string/import_opml"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/more_options_title_label" />

            <Button
                android:id="@+id/export_sources_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="@color/button_background"
                android:text="@string/export_opml"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/import_sources_button" />

            <Button
                android:id="@+id/rate_app_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="@color/button_background"
                android:text="@string/rate_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_sources_button" />

            <Button
                android:id="@+id/about_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="@color/button_background"
                android:text="@string/about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rate_app_button" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>